--- a/.github/workflows/MyFirstWorkflow.yml
+++ b/.github/workflows/MyFirstWorkflow.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 jobs:
   MyFirstJob:
-    runs-on: ubuntu:latest
+    runs-on: ubuntu-latest
     steps:
       - run: echo "👋 Hello World!"
       - name: Checkout
